import mongoose from "mongoose";

const InviteSchema = new mongoose.Schema({
  tenantId: {
    type: mongoose.Schema.Types.ObjectId,
    ref: "Tenant",
    required: true,
  },

  email: {
    type: String,
    required: true,
    lowercase: true,
  },

  role: {
    type: String,
    enum: ["ADMIN", "MANAGER", "USER", "VIEWER"],
    default: "USER",
  },

  token: {
    type: String,
    required: true,
    unique: true,
  },

  expiresAt: {
    type: Date,
    required: true,
  },

  isUsed: {
    type: Boolean,
    default: false,
  },

  invitedBy: {
    type: mongoose.Schema.Types.ObjectId,
    ref: "User",
  },

}, { timestamps: true });

InviteSchema.index({ tenantId: 1, email: 1 });

export default mongoose.model("Invite", InviteSchema);
